# Three_View_Generalized_Camera

./: README.md  changlogs.md
GPU-HC/Output_Write_Files/: CPU_Sols_Statistics.txt  GPU_Converged_HC_tracks.txt  GPU_Sols_Statistics.txt
GPU-HC/cmd/: magmaHC-main.cpp
GPU-HC/magmaHC/: CMakeLists.txt  Data_Reader.cpp  Data_Reader.hpp  Evaluations.cpp  Evaluations.hpp  GPU_HC_Solver.cpp  GPU_HC_Solver.hpp  definitions.hpp  dev-cgesv-batched-small-sm.cuh  dev-cgesv-batched-small.cuh  dev-get-new-data.cuh  typenames.hpp
GPU-HC/magmaHC/PHC_Coeffs/: p2c-generalized_3views_4pts.h  p2c-numerical_generalized_3views_6lines.h
GPU-HC/magmaHC/gpu-idx-evals/: dev-eval-indxing-generalized_3views_4pts.cuh  dev-eval-indxing-generalized_3views_6lines.cuh
GPU-HC/magmaHC/gpu-kernels/: kernel_HC_Solver_generalized_3views_4pts.cu  kernel_HC_Solver_generalized_3views_6lines.cu  magmaHC-kernels.hpp
GPU-HC/problems/generalized_3views_4pts/: generate_synthetic_data.m
auto-gen-tools/: expand_powers_in_poly_term.m  param2coeffs.m
auto-gen-tools/p2c-problems/: sys_3views_4pts.m  sys_six_lines_generalized_cam.m
parameter-HC-generalized-cam/: CMakeLists.txt
parameter-HC-generalized-cam/cmd/: CMakeLists.txt  magmaHC-main-multiple-params-dp64.cu  magmaHC-main-multiple-params.cu  magmaHC-main.cu
parameter-HC-generalized-cam/magmaHC/: CMakeLists.txt  define_params_and_read_files.cu  homotopy_continuation_solver.cu  magmaHC-problems.cuh
parameter-HC-generalized-cam/magmaHC-DP64/: CMakeLists.txt  define_params_and_read_files.cu  dev-get-new-data.cuh  dev-zgesv-batched-small.cuh  homotopy_continuation_solver.cu  magmaHC-problems.cuh
parameter-HC-generalized-cam/magmaHC-DP64/const-matrices/: p2c-symbolic_3views_4pts.h
parameter-HC-generalized-cam/magmaHC-DP64/gpu-idx-evals/: dev-eval-indxing-3views_4pts.cuh  dev-eval-indxing-six_lines_6x6.cuh
parameter-HC-generalized-cam/magmaHC-DP64/gpu-kernels/: kernel_HC_Solver_3views_4pts.cu  kernel_HC_Solver_six_lines_6x6.cu  magmaHC-kernels.h
parameter-HC-generalized-cam/magmaHC/const-matrices/: p2c-numerical_six_lines_6x6.h  p2c-numerical_six_lines_6x6_v2.h  p2c-symbolic_3views_4pts.h  p2c-symbolic_six_lines_16.h  p2c-symbolic_six_lines_6x6.h
parameter-HC-generalized-cam/magmaHC/gpu-idx-evals/: dev-eval-indxing-3views_4pts.cuh  dev-eval-indxing-six_lines_16.cuh  dev-eval-indxing-six_lines_6x6.cuh
parameter-HC-generalized-cam/magmaHC/gpu-kernels/: kernel_HC_Solver_3views_4pts.cu  kernel_HC_Solver_six_lines_16.cu  kernel_HC_Solver_six_lines_6x6.cu  magmaHC-kernels.h
parameter-HC-generalized-cam/problems/3views_4pts/: start_params_full.txt  start_sols_full.txt
parameter-HC-generalized-cam/problems/six_lines_16/: Hx_idx.txt  (+2 more)
synthetic-data/: generate_4point_data.m  generate_4point_data_noise.m  generate_6line_data.m
(+33027 files in other folders)
